--- a/src/d2dx/d2dx.vcxproj.filters
+++ b/src/d2dx/d2dx.vcxproj.filters
@@ -25,6 +25,9 @@
     <FxCompile Include="ResolveAA.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
+    <FxCompile Include="DisplayBilinearScalePS.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TextureCache.cpp" />
@@ -223,6 +226,9 @@
       <Filter>shaders</Filter>
     </Text>
     <Text Include="DisplayVS_dxbc.txt">
+      <Filter>shaders</Filter>
+    </Text>
+    <Text Include="DisplayBilinearScalePS_dxbc.txt">
       <Filter>shaders</Filter>
     </Text>
   </ItemGroup>
