Make filtering option a bit more open ended.

--- a/d2dx-defaults.cfg
+++ b/d2dx-defaults.cfg
@@ -12,7 +12,8 @@ frameless=false         # if true, the window frame (caption bar etc) will be re
 
 [game]
 size=[-1,-1]		# if [-1,-1] d2dx will decide a suitable game size, otherwise will use the size given here
-blurrybilinear=false    # if true, will use regular (blurry) bilinear filtering
+filtering=0             # if 0, will use high quality filtering
+                        #    1, will use bilinear filtering (blurrier)
 
 #
 # Opt-outs from default D2DX behavior
