Add option to use Catmull-Rom filtering.

--- a/d2dx-defaults.cfg
+++ b/d2dx-defaults.cfg
@@ -12,8 +12,9 @@ frameless=false         # if true, the window frame (caption bar etc) will be re
 
 [game]
 size=[-1,-1]		# if [-1,-1] d2dx will decide a suitable game size, otherwise will use the size given here
-filtering=0             # if 0, will use high quality filtering
-                        #    1, will use bilinear filtering (blurrier)
+filtering=0             # if 0, will use high quality filtering (sharp, more pixelated)
+                        #    1, will use bilinear filtering (blurry)
+                        #    2, will use catmull-rom filtering (higher quality than bilinear)
 
 #
 # Opt-outs from default D2DX behavior
