Add option for viewport scaling and fix bug with ClipCursor.

--- a/d2dx-defaults.cfg
+++ b/d2dx-defaults.cfg
@@ -1,32 +1,32 @@
 #
 # This is an example config file for D2DX. 
 #
-# If you don't like the default settings, you can edit this file, rename it to "d2dx.cfg"
-# and place it in the game folder.
+# If you don't like the default settings, you can edit this file, rename it to "d2dx.cfg", and place it in the game folder.
 #
 
 [window]
-scale=1			# range 1-3, an integer scale factor for the window
-position=[-1,-1]	# if [-1,-1] the window will be centered, otherwise placed at the explicit position given here
-frameless=false         # if true, the window frame (caption bar etc) will be removed
+scale=1						# range 1-3, an integer scale factor for the window
+position=[-1,-1]			# if [-1,-1] the window will be centered, otherwise placed at the explicit position given here
+frameless=false				# if true, the window frame (caption bar etc) will be removed
 
 [game]
-size=[-1,-1]		# if [-1,-1] d2dx will decide a suitable game size, otherwise will use the size given here
-filtering=0             # if 0, will use high quality filtering (sharp, more pixelated)
-                        #    1, will use bilinear filtering (blurry)
-                        #    2, will use catmull-rom filtering (higher quality than bilinear)
+scale=3.0					# scale the size of the viewport (capped to screen size, maintains aspect ratio)
+size=[-1,-1]				# if [-1,-1] d2dx will decide a suitable game size, otherwise will use the size given here
+filtering=0					# if 0, will use high quality filtering (sharp, more pixelated)
+							#    1, will use bilinear filtering (blurry)
+							#    2, will use catmull-rom filtering (higher quality than bilinear)
 
 #
 # Opt-outs from default D2DX behavior
 #
 [optouts]
-noclipcursor=false	 # if true, will not lock the mouse cursor to the game window
-nofpsfix=false		 # if true, will not apply the basic fps fix (precludes high fps support)
-noresmod=false		 # if true, will not apply the built-in D2HD resolution mod (precludes widescreen support)
-nowide=false		 # if true, will not choose a widescreen resolution (if noresmod is true, this does nothing)
-nologo=false		 # if true, will not display the D2DX logo on the title screen
-novsync=false		 # if true, will not use vertical sync
-noaa=false		 # if true, will not apply anti-aliasing to jagged edges
-nocompatmodefix=false	 # if true, will not block the use of "Windows XP compatibility mode"
-notitlechange=false	 # if true, will not change the window title text
-nomotionprediction=false # if true, will not run the game graphics at high fps
+noclipcursor=false			# if true, will not lock the mouse cursor to the game window
+nofpsfix=false				# if true, will not apply the basic fps fix (precludes high fps support)
+noresmod=false				# if true, will not apply the built-in D2HD resolution mod (precludes widescreen support)
+nowide=false				# if true, will not choose a widescreen resolution (if noresmod is true, this does nothing)
+nologo=false				# if true, will not display the D2DX logo on the title screen
+novsync=false				# if true, will not use vertical sync
+noaa=false					# if true, will not apply anti-aliasing to jagged edges
+nocompatmodefix=false		# if true, will not block the use of "Windows XP compatibility mode"
+notitlechange=false			# if true, will not change the window title text
+nomotionprediction=false	# if true, will not run the game graphics at high fps
