Add `nokeepaspectratio` option

--- a/d2dx-defaults.cfg
+++ b/d2dx-defaults.cfg
@@ -30,3 +30,4 @@ noaa=false		 # if true, will not apply anti-aliasing to jagged edges
 nocompatmodefix=false	 # if true, will not block the use of "Windows XP compatibility mode"
 notitlechange=false	 # if true, will not change the window title text
 nomotionprediction=false # if true, will not run the game graphics at high fps
+nokeepaspectratio=false # if true, will not keep the aspect ratio when drawing to the screen
