Fix mispredictions in the unit motion prediction at low frame rates. Improve performance  of the unit motion predictor

--- a/src/d2dx/d2dx.vcxproj
+++ b/src/d2dx/d2dx.vcxproj
@@ -193,6 +193,7 @@
     <ClCompile Include="BuiltinResMod.cpp" />
     <ClCompile Include="CompatibilityModeDisabler.cpp" />
     <ClCompile Include="D2DXContextFactory.cpp" />
+    <ClCompile Include="D2Types.cpp" />
     <ClCompile Include="Detours.cpp" />
     <ClCompile Include="D2DXConfigurator.cpp" />
     <ClCompile Include="TextMotionPredictor.cpp" />
