--- a/src/d2dx/d2dx.vcxproj
+++ b/src/d2dx/d2dx.vcxproj
@@ -291,7 +291,7 @@
     <ClInclude Include="TextureCachePolicyBitPmru.h" />
     <ClInclude Include="TextureHasher.h" />
     <ClInclude Include="Types.h" />
-    <ClInclude Include="UnitMotionPredictor.h" />
+    <ClInclude Include="MotionPredictor.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="D2DXContext.h" />
@@ -346,7 +346,7 @@
     </ClCompile>
     <ClCompile Include="TextureCachePolicyBitPmru.cpp" />
     <ClCompile Include="TextureHasher.cpp" />
-    <ClCompile Include="UnitMotionPredictor.cpp" />
+    <ClCompile Include="MotionPredictor.cpp" />
     <ClCompile Include="Utils.cpp" />
     <ClCompile Include="WeatherMotionPredictor.cpp" />
   </ItemGroup>
